src/objects/Perjudicado_Siniestro__c.object
<CustomObject>
    <description>Representa las personas que están afectadas por un Siniestro.</description>
    <fields>
        <fullName>PRJ_EMA_Email__c</fullName>
        <description>Email del perjudicado del siniestro</description>
        <label>Correo electrónico</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PRJ_LKP_Siniestro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Siniestro al que se vincula el Perjudicado. Representa la FK al objeto Case. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo External ID del objeto Case (Case.CAS_TXT_Identificador__c) para Siniestros: &quot;[Código de CIA]_[Nº de Siniestro HomeServe]&quot;</description>
        <label>Siniestro</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Perjudicados Siniestro</relationshipLabel>
        <relationshipName>PER_REL_Siniestro</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRJ_SEL_Otros_Danos__c</fullName>
        <description>Otros Daños (Lista de Selección múltiple).</description>
        <label>Otros Daños</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alimentos refrigerados</fullName>
                </value>
                <value>
                    <fullName>LESIONES CORPORALES</fullName>
                    <label>Lesiones Corporales</label>
                </value>
                <value>
                    <fullName>OTROS DAÑOS PERJUDICADO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRJ_SEL_Perjudicado_Tipo_Documento__c</fullName>
        <description>Tipo de documento del perjudicado del siniestro</description>
        <label>Tipo de Documento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_DocumentoId</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRJ_SEL_Provincia__c</fullName>
        <description>Provincia del perjudicado.</description>
        <label>Provincia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Provincias</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRJ_SEL_Situacion_Danos__c</fullName>
        <label>Situación Daños</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACUARIOS</fullName>
                </value>
                <value>
                    <fullName>TECHO</fullName>
                    <label>Techo</label>
                </value>
                <value>
                    <fullName>SUELO</fullName>
                    <label>Suelo</label>
                </value>
                <value>
                    <fullName>CRISTALES</fullName>
                </value>
                <value>
                    <fullName>Enseres</fullName>
                </value>
                <value>
                    <fullName>Mobiliario</fullName>
                </value>
                <value>
                    <fullName>Pared</fullName>
                </value>
                <value>
                    <fullName>Puerta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRJ_SEL_Tipo_Perjudicado__c</fullName>
        <description>Tipo de perjudicado</description>
        <label>Tipo de perjudicado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Tipos_Perjudicado_Sini</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRJ_TFN_Movil__c</fullName>
        <label>Teléfono Móvil</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PRJ_TFN_Telefono_1__c</fullName>
        <description>Teléfono 1 del perjudicado del siniestro</description>
        <label>Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PRJ_TFN_Telefono_Adicional__c</fullName>
        <description>Teléfono 2 del perjudicado del siniestro</description>
        <label>Teléfono Adicional</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Apellido_1__c</fullName>
        <description>Primer apellido del perjudicado. Este campo se utiliza para el guardado en la tabla de movimientos que se envía a las empresas aseguradoras.</description>
        <label>Primer Apellido</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Apellido_2__c</fullName>
        <description>Segundo apellido del perjudicado. Este campo se utiliza para el guardado en la tabla de movimientos que se envía a las empresas aseguradoras.</description>
        <label>Segundo Apellido</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Cbanc_Codigo_Entidad__c</fullName>
        <description>Código de entidad bancaria de la Cuenta Bancaria.</description>
        <label>Cta. Bancaria: Código Entidad</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Cbanc_Digito_Control_IBAN__c</fullName>
        <label>Cta. Bancaria: Dígito de Control &quot;IBAN&quot;</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Cbanc_Digito_Control__c</fullName>
        <label>Cta. Bancaria: Dígito de Control</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Cbanc_Numero__c</fullName>
        <description>Representa los últimos números de la cuenta bancaria</description>
        <label>Cta. bancaria: Nº de Cuenta</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Cbanc_Pais__c</fullName>
        <description>Código de País de la Cuenta Bancaria.</description>
        <label>Cta. Bancaria: Código País</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Cbanc_Sucursal_Oficina__c</fullName>
        <description>Código sucursal/oficina de la Cuenta Bancaria.</description>
        <label>Cta.Bancaria: Código Sucursal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Codigo_Postal__c</fullName>
        <description>Código postal del perjudicado del siniestro.</description>
        <label>Código Postal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Direccion__c</fullName>
        <description>Vía/Domicilio.</description>
        <label>Dirección</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Nombre__c</fullName>
        <description>Nombre del Perjudicado</description>
        <label>Nombre</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Pais__c</fullName>
        <description>País del perjudicado. Este campo se utiliza para el guardado en la tabla de movimientos que se envía a las empresas aseguradoras.</description>
        <label>País</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Perjudicado_N_Documento__c</fullName>
        <label>Nº Documento</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRJ_TXT_Poblacion__c</fullName>
        <description>Población del perjudicado</description>
        <label>Población</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Perjudicado Siniestro</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Perjudicados Siniestro</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Longitud_de_campo_de_telefonos</fullName>
        <active>true</active>
        <description>La longitud de los campos tipo teléfono no puede ser mayor a 20 dígitos.</description>
        <errorConditionFormula>OR( LEN(PRJ_TFN_Telefono_1__c)&gt;20, LEN(PRJ_TFN_Telefono_Adicional__c)&gt;20, LEN(PRJ_TFN_Movil__c)&gt;20)</errorConditionFormula>
        <errorMessage>La longitud de los campos tipo teléfono no puede ser mayor a 20 dígitos.</errorMessage>
    </validationRules>
</CustomObject>